--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -4,7 +4,7 @@
 // $body-bg: black;
 // $body-color: white;
 // $link-hover-color: grey;
-// $font-family-sans-serif: "Helvetica Neue";
+// $font-family: 'Gloria Hallelujah', cursive;
 
 /* bootstrap */
 // Option A: Include all of Bootstrap
